--- a/www/css/style.css
+++ b/www/css/style.css
@@ -114,16 +114,8 @@ body {
 }
 
 .challenge-badge {
-  right: 10px!important;
-}
-
-.challenge-badge-detailed {
-  background-color: #f0b840;
-  color: #fff;
-  display: flex;
-  position: absolute;
-  top: 20px!important;
-  right: 10px!important;
+  top: 15px!important;
+  right: 15px!important;
 }
 
 /* -------One Challenge-------- */
@@ -133,6 +125,15 @@ body {
   font-size: 30px;
   line-height: 30px;
   white-space: normal;
+}
+
+.challenge-badge-detailed {
+  background-color: #f0b840;
+  color: #fff;
+  display: flex;
+  position: absolute;
+  top: 20px!important;
+  right: 10px!important;
 }
 
 .user-container {
@@ -194,22 +195,8 @@ body {
   background-color: #CFCFCF;
 }
 
-.progress-bar-old {
-  -webkit-appearance: none;
-}
-
-.progress-bar-old::-webkit-progress-value {
-  background-image:
-   -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0,0, 0, .1) 66%, transparent 66%),
-   -webkit-linear-gradient(left, #EF4E3A, #66CC33);
-  border-radius: 2px; 
-  background-size: 35px 20px, 100% 100%, 100% 100%;
-  -webkit-animation: animate-stripes 5s linear infinite;
-}
-
-/* used to animate the progress bar */
-@-webkit-keyframes animate-stripes {
-   100% { background-position: -100px 0px; }
+.one-exercise {
+  height: 65px;
 }
 
 .exercise-name {
@@ -217,15 +204,13 @@ body {
   font-weight: 900;
 }
 
-.challenge-complete{
-  min-height: 40px;
-  background-color: #f5f5f5;
-  color: #222;
-  font-weight: bold;
+.challenge-exercise-badge {
+  top: 20px!important;
+  right: 75px!important;
 }
 
 .challenge-exercise-buttons {
-  top: 45px!important;
+  top: 15px!important;
 }
 
 /* -------Activties-------- */
